--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.ucchyocean</groupId>
   <artifactId>ColorTeamingClassSign</artifactId>
-  <version>0.2.0</version>
+  <version>0.3.0</version>
 
   <licenses>
     <license>
@@ -68,17 +68,17 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.6.2-R1.0</version>
+      <version>1.6.4-R0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>craftbukkit</artifactId>
-      <version>1.6.2-R1.0</version>
+      <version>1.6.4-R0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.github.ucchyocean</groupId>
       <artifactId>ColorTeaming</artifactId>
-      <version>2.2.3</version>
+      <version>2.2.5</version>
     </dependency>
   </dependencies>
 </project>
