--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.ucchyocean</groupId>
   <artifactId>ColorTeamingClassSign</artifactId>
-  <version>1.0.0</version>
+  <version>1.1.0</version>
 
   <licenses>
     <license>
@@ -42,14 +42,20 @@
         </configuration>
       </plugin>
       <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.3</version>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.2.1</version>
+        <configuration>
+          <finalName>${project.artifactId}-${project.version}</finalName>
+          <descriptors>
+            <descriptor>distribution.xml</descriptor>
+          </descriptors>
+        </configuration>
         <executions>
           <execution>
-            <id>default-jar</id>
-            <phase>package</phase>
+            <phase>deploy</phase>
             <goals>
-              <goal>jar</goal>
+              <goal>assembly</goal>
             </goals>
           </execution>
         </executions>
@@ -64,6 +70,11 @@
       <url>http://repo.bukkit.org/content/groups/public</url>
     </repository>
     <repository>
+      <id>spigot-repo</id>
+      <name>Spigot Maven Repository</name>
+      <url>https://hub.spigotmc.org/nexus/content/groups/public</url>
+    </repository>
+    <repository>
       <id>ucchy-github</id>
       <name>ucchy github repository</name>
       <url>https://raw.github.com/ucchyocean/mvn-repo/master</url>
@@ -74,12 +85,12 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.7.2-R0.4-SNAPSHOT</version>
+      <version>1.8.3-R0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.github.ucchyocean</groupId>
       <artifactId>ColorTeaming</artifactId>
-      <version>2.3.0</version>
+      <version>2.4.3</version>
     </dependency>
   </dependencies>
 </project>
